# opensync-file-sync

./: CMakeLists.txt
src/: CMakeLists.txt  file.c  file_sync.c  file_sync.h  plain.c
