PROJECT( libopensync-plugin-file C )

SET( VERSION "0.39" )

SET( OPENSYNC_MIN_VERSION "0.40" )

CMAKE_MINIMUM_REQUIRED( VERSION 2.4.4 )

FIND_PACKAGE( OpenSync REQUIRED )
FIND_PACKAGE( GLIB2 REQUIRED )
FIND_PACKAGE( LibXml2 REQUIRED )

INCLUDE( OpenSyncInternal )
INCLUDE( Testing )

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( tests )

OPENSYNC_PACKAGE( ${PROJECT_NAME} ${VERSION} )

