LINK_DIRECTORIES( ${OPENSYNC_LIBRARY_DIRS} ${GLIB2_LIBRARY_DIRS} ${LIBXML2_LIBRARY_DIRS} )
INCLUDE_DIRECTORIES( ${OPENSYNC_INCLUDE_DIRS} ${GLIB2_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIR} )

OPENSYNC_PLUGIN_ADD( file-sync file_sync.c )


OPENSYNC_FORMAT_ADD( file file.c )
OPENSYNC_FORMAT_ADD( plain plain.c )

TARGET_LINK_LIBRARIES( file-sync ${OPENSYNC_LIBRARIES} ${GLIB2_LIBRARIES} ${LIBXML2_LIBRARIES} )

TARGET_LINK_LIBRARIES( file ${OPENSYNC_LIBRARIES} ${GLIB2_LIBRARIES} )
TARGET_LINK_LIBRARIES( plain ${OPENSYNC_LIBRARIES} ${GLIB2_LIBRARIES} )

###### INSTALL ################### 
OPENSYNC_PLUGIN_INSTALL( file-sync ) 

OPENSYNC_PLUGIN_CONFIG( file-sync )

OPENSYNC_FORMAT_INSTALL( file )
OPENSYNC_FORMAT_INSTALL( plain )

